Updated my earnings info

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <p>I am 18 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
-    <p>🎂🎊 21 Oct 🎊🎂</p>
+    <!-- <p>🎂🎊 21 Oct 🎊🎂</p> -->
     <p>Nationality Bangali</p>
-    <p>Currently I earn $35+ per month</p>
+    <p>Currently I earn $50+ per month</p>
     <p>I will meet you if I succeed in life</p>
     <p>I always try to learn the unknown things</p>
     <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU</p>
