--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <p>Languages I can speak: Bangla, Hindi, English, Urdu</p>
     <p>I love to learn new things, but after learning i hate to do that thing</p>
     <p>Interested in Android Stuff, Linux, Programming Languages, Electronics</p>
+    <p>Do you have feelings for me? Vomit it. Because, I don't care about your fucking feelings</p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Web Design</p>
     <div class="w3-white">
