--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p>I am 18 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
-    <!-- <p>🎂🎊 21 Oct 🎊🎂</p> -->
+    <p>🎂🎊 21 Oct 🎊🎂</p>
     <p>Nationality Bangali</p>
     <p>Currently I earn $50+ per month</p>
     <p>I will meet you if I succeed in life</p>
