--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
     <p>Religion Muslim</p>
     <p>My Birthday 21 Oct</p>
     <p>Nationality Bangali</p>
-    <p>Currently I earn $50+ per month</p>
-    <p>I will meet you if I succeed in life</p>
-    <p>I always try to learn the unknown things</p>
-    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU</p>
-    <p>Languages I can speak: Bangla, Hindi, English, Urdu</p>
-    <p>I love to learn new things, but after learning i hate to do that thing</p>
-    <p>Interested in Android Stuff, Linux, Programming Languages, Electronics</p>
+    <p>Currently I earn $50+ per month.</p>
+    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>
+    <p>Languages I can speak: Bangla, Hindi, English, Urdu.</p>
+    <p>I love to learn new things, but after learning i hate to do that thing.</p>
+    <p>Interested in Android Stuff, Linux, Networking, Programming Languages, Electronics.</p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Web Design</p>
     <div class="w3-white">
