--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>Religion Muslim</p>
     <p>My Birthday 21 Oct</p>
     <p>Nationality Bangali</p>
-    <p>Currently I earn $50+ per month.</p>
+    <p>Currently I earn more than $90 per month.</p>
     <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>
     <p>Languages I can speak: Bangla, Hindi, English, Urdu.</p>
     <p>I love to learn new things, but after learning i hate to do that thing.</p>
