--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     <p>Religion Muslim</p>
     <!--<p>My Birthday 21 Oct</p>-->
     <p>Nationality Bangali</p>
-    <p>Currently I earn more than $65 per month.</p>
-    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>
+    <!--<p>Currently I earn more than $65 per month.</p>
+    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>-->
     <p>Languages I can speak: Bangla, Hindi, English, Urdu.</p>
-    <p>I love to learn new things, but after learning i hate to do that thing.</p>
+    <!--<p>I love to learn new things, but after learning i hate to do that thing.</p>-->
     <p>Interested in Android Stuff, Linux, Networking, Programming Languages, Electronics.</p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Web Design</p>
