--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p>I am 19 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
-    <!--<p>My Birthday 21 Oct</p>-->
+    <p>My Birthday 21 Oct</p>
     <p>Nationality Bangali</p>
     <!--<p>Currently I earn more than $65 per month.</p>
     <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>-->
@@ -140,16 +140,18 @@
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/sailboat.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/8c6ab43881216b0a0c081.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/975bbde136742e2b3af6c.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/67a2f46d9f22922c36a16.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/2f73d1ad7217acb961663.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/chef.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/p6.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/70d57ed3f8eb173fa4689.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/8ba93feb23f8b3aaa9484.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/8243275f28e91594e72f1.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/ab0a54f4530be62295172.jpg" style="width:100%">
+        <img src="https://telegra.ph/file/69bf0a38827c2cf3a66a3.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
@@ -162,9 +164,9 @@
     <hr style="width:200px" class="w3-opacity">
 
   <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Chandpur, Chittagong, Bangladesh</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +8801302048008</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: shafikkazi25@gmail.com</p>
+      <p><a href="https://goo.gl/maps/EtzCcCCjMZkQYnE4A" target="_blank"><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Chandpur, Chittagong, Bangladesh</a></p>
+      <p><a href="tel:+8801302048008" target="_blank"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +8801302048008"</a></p>
+      <p><a href="mailto:shafikkazi25@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: shafikkazi25@gmail.com</a></p>
     </div><br>
 
   <!-- End Contact Section -->  
@@ -175,6 +177,7 @@
 
   <!-- Footer. This section contains social media links and icons, replace with your account's links. -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+  <a href="tel:+8801302048008" target="_blank"><i class="fa fa-phone w3-hover-opacity"></i></a>
   <a href="https://www.facebook.com/sayedunmuntaka" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <a href="https://www.github.com/SayedunMuntaka" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
   <a href="https://www.instagram.com/sayedun_muntaka" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
@@ -193,4 +196,4 @@
 </html>
 
 
-<!-- CREDIT GOES TO W3SCHOOLS FOR THE TEMPLATE -->
+<!-- CREDIT GOES TO W3SCHOOLS FOR THE TEMPLATE.! FEEL FREE TO FORK, MODIFY, UPGRADE AND DEPLOY YOUR OWN PORTFOLIO WEBSITE -->
