--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Sayedun Muntaka <sup>MASUM</sup></p>
     <p>Single</p>
-    <p>I am 19 yrs old</p>
+    <p>I am 20 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
-    <p>My Birthday 21 Oct</p>
+    <!--<p>My Birthday 21 Oct</p>-->
     <p>Nationality Bangali</p>
     <!--<p>Currently I earn more than $65 per month.</p>
     <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>-->
