--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <p>I am 20 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
-    <p>Nationality Bangali</p>
-    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>-->
+    <p>Nationality Bangali</p>-
+    <P>Give Me  MONEY  Take LOVE  _  Otherwise STFU.</p>
     <p>Languages I can speak: Bangla, Hindi, English, Urdu.</p>
     <!--<p>I love to learn new things, but after learning i hate to do that thing.</p>-->
     <p>Interested in Android Stuff, Linux, Networking, Programming Languages, Electronics.</p>
