Update info in index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Sayedun Muntaka <sup>MASUM</sup></p>
     <p>Single</p>
+    <p>Height: 5'9"</p>
     <p>I am 20 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
