--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>My name is Sayedun Muntaka <sup>MASUM</sup></p>
+    <p>My Name is Sayedun Muntaka <sup>MASUM</sup></p>
     <p>Single</p>
     <p>Height: 5'10"</p>
-    <p>I am 20 yrs old</p>
+    <p>I am 21 yrs old</p>
     <p>Blood Group B+</p>
     <p>Religion Muslim</p>
     <p>Nationality Bangali</p>-
