--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ sendVisitorInfo(); // Keep this line
         <img src="https://telegra.ph/file/2f73d1ad7217acb961663.jpg" style="width:100%">
       </div>
 
-      <div class="w3-half"></div>
+      <div class="w3-half">
         <img src="https://telegra.ph/file/70d57ed3f8eb173fa4689.jpg" style="width:100%">
         <img src="https://telegra.ph/file/8ba93feb23f8b3aaa9484.jpg" style="width:100%">
         <img src="https://telegra.ph/file/8243275f28e91594e72f1.jpg" style="width:100%">
