--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ async function logVisitorInfo(resolution, batteryStatus, locationDetails, device
             signal: controller.signal,
             method: "POST",
             headers: {
-                "Content-Type": "application/json",
-                "Permissions-Policy": "compute-pressure=()" // Add this line
+                "Content-Type": "application/json"
             },
             body: JSON.stringify(data),
             mode: 'cors' // Add this line
