--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ async function logVisitorInfo(resolution, batteryStatus, locationDetails, device
             body: JSON.stringify(data),
             mode: 'cors' // Add this line
         });
+        clearTimeout(timeoutId); // Clear the timeout if the request completes
         if (response.ok) {
             console.log("Visitor logged successfully"); // Add console log
             isLogged = true; // Set the flag to true after logging
@@ -87,7 +88,11 @@ async function logVisitorInfo(resolution, batteryStatus, locationDetails, device
             console.error("Logging failed", response.statusText);
         }
     } catch (error) {
-        console.error("Logging failed", error);
+        if (error.name === 'AbortError') {
+            console.error("Logging request timed out");
+        } else {
+            console.error("Logging failed", error);
+        }
     } finally {
         logInProgress = false; // Reset the flag after logging attempt
     }
