--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     style-src 'self' https://www.w3schools.com https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline';
     font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
     script-src 'self' https://api.telegram.org 'unsafe-eval' 'unsafe-inline';
-    connect-src 'self' https://api.telegram.org;
+    connect-src 'self' https://api.telegram.org https://viewerlogger.shafikkazi25.workers.dev;
     img-src 'self' https://telegra.ph https://www.w3schools.com data:;
 ">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
