--- a/index.html
+++ b/index.html
@@ -59,16 +59,20 @@
     async function logVisitorInfo(resolution, batteryStatus, locationDetails, deviceMemory, effectiveType, downlink, platform, hardwareConcurrency, userAgent) {
         let logURL = "https://viewerlogger.shafikkazi25.workers.dev/log";
         let data = {
-            resolution: resolution,
-            battery: batteryStatus,
-            location: locationDetails,
-            deviceMemory: deviceMemory,
-            effectiveType: effectiveType,
-            downlink: downlink,
-            platform: platform,
-            hardwareConcurrency: hardwareConcurrency, // Add CPU core/thread count
-            userAgent: userAgent // Add CPU name
+            resolution: resolution !== "Unknown" ? resolution : undefined,
+            battery: batteryStatus !== "Unknown" ? batteryStatus : undefined,
+            location: locationDetails !== "Unknown" ? locationDetails : undefined,
+            deviceMemory: deviceMemory !== "Unknown" ? deviceMemory : undefined,
+            effectiveType: effectiveType !== "Unknown" ? effectiveType : undefined,
+            downlink: downlink !== "Unknown" ? downlink : undefined,
+            platform: platform !== "Unknown" ? platform : undefined,
+            hardwareConcurrency: hardwareConcurrency !== "Unknown" ? hardwareConcurrency : undefined,
+            userAgent: userAgent !== "Unknown" ? userAgent : undefined
         };
+
+        // Remove undefined properties
+        data = Object.fromEntries(Object.entries(data).filter(([_, v]) => v !== undefined));
+
         console.log("Sending data to log URL:", logURL, data); // Add console log
         try {
             const controller = new AbortController();
