--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Sayedun Muntaka</h1>
-    <p>Part Time Student, Full Time Worker</p>
+    <p>Working at <a href="https://www.mirazit.com/">Meraz IT Solution</a></p>
+    <p>Multiplan Center, New Elephant Rd, Dhaka 1205</p>
     <img src="myimg.png" alt="Sayedun Munataka's photo error loading" class="w3-image" width="550" height="auto">
   </header>
 
