Extended about me.

--- a/index.html
+++ b/index.html
@@ -165,16 +165,21 @@
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Sayedun Muntaka <sup>MASUM</sup></p>
-    <p>Single</p>
+    <p>I’m 22 years old and single</p>
     <p>Height: 5'11"</p>
-    <p>I am 22 years old</p>
+    <p>I hold a firm belief that a man’s partner reflects the strength of his own character. That belief shapes how I live. I keep my principles tight, I don’t let myself slip, and I refuse to compromise on the standards I expect in my future wife. I’m confident in my character, and I expect the same discipline, modesty, and self-respect from the person who will share my life.</p>
+    <p>I have no interest in women who flirt, socialize loosely with other men, behave loudly in public, or dance for attention. That kind of lifestyle goes against everything I value. I want a relationship built on dignity, loyalty, and restraint — nothing less.</p>
+    <p>I don’t engage in temporary or illicit relationships. If I choose someone, it will be through marriage, with responsibility and commitment, not casual attachment.</p>
     <p>Blood Group: B+</p>
     <p>Religion: Muslim</p>
     <p>Nationality: Bangladeshi</p>
-    <p>I dislike Bangladeshi politics</p>
-    <p>You might think I'm an introvert, and you're right</p>
-    <p>I can speak the following languages: Bangla, Hindi, English, and Urdu</p>
-    <p>I'm interested in Android development, Linux, servers, networking, programming languages, and electronics.</p>
+    <p>I prefer staying away from Bangladeshi politics.</p>
+    <p>People often think I’m an introvert — they’re not wrong.</p>
+    <p>I communicate comfortably in Bangla, Hindi, English, and Urdu.</p>
+    <p>I spend a lot of time exploring Android development, debugging apps, and studying how systems behave beneath the surface.</p>
+    <p>I’m deeply interested in Linux, servers, networking, and understanding how hardware and software communicate at the lowest level.</p>
+    <p>Electronics fascinate me, especially board repair, power systems, and solar/hybrid setups.</p>
+    <p>I like building tools, automating things, and learning through hands-on problem-solving. If something breaks, I track down the root cause — that’s how I learn best.</p>
     <h2 class="w3-text-light-grey">My Skills</h2>
     <hr style="width:200px" class="w3-opacity">
     <p class="w3-wide">Web Design</p>
