--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
     <p>My name is Sayedun Muntaka <sup>MASUM</sup></p>
     <p>I’m 22 years old and single</p>
     <p>Height: 5'11"</p>
-    <p>I hold a firm belief that a man’s partner reflects the strength of his own character. That belief shapes how I live. I keep my principles tight, I don’t let myself slip, and I refuse to compromise on the standards I expect in my future wife. I’m confident in my character, and I expect the same discipline, modesty, and self-respect from the person who will share my life.</p>
+    <p>“Bad women are for bad men, and bad men are for bad women. Good women are for good men, and good men are for good women. Good people are innocent of what others say about them. For them there is forgiveness and a respectful, good life.”(Surah An-Nur : 26)</p>
+    <p>“A man who commits adultery will marry only a woman who commits adultery, and a woman who commits adultery will marry only a man who commits adultery.”(Surah An-Nur : 03)</p>
+    <p>So, I hold a firm belief that a man’s partner reflects the strength of his own character. That belief shapes how I live. I keep my principles tight, I don’t let myself slip, and I refuse to compromise on the standards I expect in my future wife. I’m confident in my character, and I expect the same discipline, modesty, good character and self-respect from the person who will share my life.</p>
     <p>I have no interest in women who flirt, socialize loosely with other men, behave loudly in public, or dance for attention. That kind of lifestyle goes against everything I value. I want a relationship built on dignity, loyalty, and restraint — nothing less.</p>
     <p>I don’t engage in temporary or illicit relationships. If I choose someone, it will be through marriage, with responsibility and commitment, not casual attachment.</p>
     <p>Blood Group: B+</p>
@@ -370,5 +372,6 @@ function topFunction() {
 
 
 <!-- CREDIT GOES TO W3SCHOOLS FOR THE TEMPLATE.! FEEL FREE TO FORK, MODIFY, UPGRADE AND DEPLOY YOUR OWN PORTFOLIO WEBSITE -->
+
 
 
