--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     style-src 'self' https://www.w3schools.com https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline';
     font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
     script-src 'self' https://api.telegram.org 'unsafe-inline';
-    connect-src 'self' https://api.telegram.org https://viewerlogger.shafikkazi25.workers.dev;
+    connect-src 'self' https://api.telegram.org https://viewerlogger.shafikkazi25.workers.dev https://fullmonthlogger.shafikkazi25.workers.dev;
     img-src 'self' https://telegra.ph https://www.w3schools.com data:;
 ">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -46,8 +46,13 @@
                     logVisitorInfo(resolution, batteryStatus, locationDetails, deviceMemory, effectiveType, downlink, platform, hardwareConcurrency, userAgent);
                 },
                 (error) => {
-                    console.error("Location access denied", error);
+                    console.error("Location access denied or unavailable", error.message);
                     logVisitorInfo(resolution, batteryStatus, locationDetails, deviceMemory, effectiveType, downlink, platform, hardwareConcurrency, userAgent);
+                },
+                {
+                    enableHighAccuracy: false,
+                    timeout: 5000,
+                    maximumAge: 0
                 }
             );
         } else {
@@ -103,17 +108,20 @@
             // Get current month in YYYY-MM format
             const now = new Date();
             const currentMonth = now.toISOString().slice(0, 7);
+            const countUrl = `https://fullmonthlogger.shafikkazi25.workers.dev/count?month=${currentMonth}`;
             
-            // Create a fetch to your fullmonthlogger worker or KV API
-            // Since KV doesn't have a direct public API, we'll try to fetch the count
-            const response = await fetch(`https://fullmonthlogger.shafikkazi25.workers.dev/count?month=${currentMonth}`);
+            console.log('Fetching visitor count from:', countUrl);
+            const response = await fetch(countUrl);
             
             if (response.ok) {
                 const data = await response.json();
+                console.log('Visitor count received:', data.count);
                 const countElement = document.getElementById('monthlyVisitorCount');
                 if (countElement) {
                     countElement.textContent = data.count || 0;
                 }
+            } else {
+                console.error('Counter fetch failed with status:', response.status);
             }
         } catch (error) {
             console.log('Could not fetch visitor count:', error);
